--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("./reset.css");
 @import url("./card.css");
 @import url("./button.css");
-@import url("./list.css");
+@import url("./element.css");
 
 button {
   border: none;
