--- a/css/card.css
+++ b/css/card.css
@@ -1,6 +1,6 @@
 .cardClass {
     width: 594px;
-    background: #ffffff;
+    background: #dbe0f2;
     box-shadow: 0px 8px 35px rgba(0, 0, 0, 0.16);
     border-radius: 16px;
     margin: 0 auto;
@@ -17,7 +17,7 @@
   
   .delete {
     height: 75px;
-    background-color: #F5F5F5;
+    background-color: #dbe0f2;
     padding-left: 24px;
     padding-right: 24px;
     border-bottom-right-radius: 16px;
