--- a/css/element.css
+++ b/css/element.css
@@ -11,11 +11,10 @@
 .text {
   margin-left: 16px;
 
-  font-family: "Inter";
+  font-family: "Caveat";
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 21px;
+  font-size: 26px;
   color: #54595e;
 }
 
@@ -23,12 +22,11 @@
   margin-left: 16px;
   text-decoration: line-through;
   
-  font-family: "Inter";
+  font-family: "Caveat";
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 21px;
-  color: #54595e;
+  font-size: 24px;
+  color: #ad168c;
 }
 
 .close {
@@ -37,6 +35,6 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 700;
-  font-size: 28px;
-  color: #ff0000;
+  font-size: 24px;
+  color: #ad168c;
 }
