--- a/css/card.css
+++ b/css/card.css
@@ -22,6 +22,7 @@
     padding-right: 24px;
     border-bottom-right-radius: 16px;
     border-bottom-left-radius: 16px;
+    margin-bottom: 50px;
   
     font-family: "Inter";
     font-style: normal;
