--- a/css/button.css
+++ b/css/button.css
@@ -1,47 +1,61 @@
 .buttonOne {
-    width: 166px;
-    height: 39px;
-    background: #6b81d7;
-    border-radius: 4px;
-  
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    color: #ffffff;
-    cursor: pointer;
-  }
-  
-  .buttonTwo {
-    width: 214px;
-    height: 39px;
-    background: #70b8d9;
-    border-radius: 4px;
-  
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    color: #ffffff;
-    cursor: pointer;
-  }
-  
-  .buttonThree {
-    width: 131px;
-    height: 39px;
-    background: #ad168c;
-    border-radius: 4px;
-  
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    color: #ffffff;
-    cursor: pointer;
-  }
+  width: 166px;
+  height: 39px;
+  background: #6b81d7;
+  border-radius: 4px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.buttonTwo {
+  width: 214px;
+  height: 39px;
+  background: #70b8d9;
+  border-radius: 4px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.buttonThree {
+  width: 131px;
+  height: 39px;
+  background: #ad168c;
+  border-radius: 4px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.buttonwrap {
+  width: 50px;
+  height: 20px;
+  background: #ad168c;
+  border-radius: 4px;
+
+  font-family: "Caveat";
+  font-style: normal;
+  font-size: 14px;
+  text-align: center;
+  color: #ffffff;
+  cursor: pointer;
+}
