--- a/css/card.css
+++ b/css/card.css
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 24px 24px;
+    margin: 8px 24px 24px;
     border-bottom: 1px solid #dee2e6;
   }
   
